fixed image visibility

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -170,6 +170,6 @@ img {
 
 .sets, .reps {
 	margin: 0;
-	font-size: 700%;
+	font-size: 800%;
 	line-height:1em;
 }
